--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "native-base": "^2.3.3",
     "react": "16.0.0-alpha.12",
     "react-native": "^0.48.4",
+    "react-native-elements": "^0.17.0",
     "react-native-router-flux": "^4.0.0-beta.22",
     "react-router": "^4.2.0",
     "react-tap-event-plugin": "^3.0.2",
