--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
     "expo": "^21.0.0",
     "jwt-decode": "^2.2.0",
     "jwt-simple": "^0.5.1",
+    "material-design-icons": "^3.0.1",
     "native-base": "^2.3.3",
     "react": "16.0.0-alpha.12",
     "react-native": "^0.48.4",
     "react-native-elements": "^0.17.0",
     "react-native-router-flux": "^4.0.0-beta.22",
+    "react-native-vector-icons": "^4.4.2",
     "react-router": "^4.2.0",
     "react-tap-event-plugin": "^3.0.2",
     "validator": "^9.1.0",
