--- a/package.json
+++ b/package.json
@@ -24,10 +24,13 @@
     "jwt-simple": "^0.5.1",
     "material-design-icons": "^3.0.1",
     "native-base": "^2.3.3",
+    "rc-tooltip": "^3.6.0",
     "react": "16.0.0-alpha.12",
     "react-native": "^0.48.4",
     "react-native-elements": "^0.17.0",
+    "react-native-popup-dialog": "^0.9.38",
     "react-native-router-flux": "^4.0.0-beta.22",
+    "react-native-tooltip": "^5.0.0",
     "react-native-vector-icons": "^4.4.2",
     "react-router": "^4.2.0",
     "react-tap-event-plugin": "^3.0.2",
