added badges and  more stats to my stats page

--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "native-base": "^2.3.3",
     "rc-tooltip": "^3.6.0",
     "react": "16.0.0-alpha.12",
+    "react-d3-radar": "^0.2.6",
     "react-native": "^0.48.4",
     "react-native-elements": "^0.17.0",
+    "react-native-pathjs-charts": "0.0.31",
     "react-native-popup-dialog": "^0.9.38",
     "react-native-router-flux": "^4.0.0-beta.22",
     "react-native-tooltip": "^5.0.0",
