--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-native-pathjs-charts": "0.0.31",
     "react-native-popup-dialog": "^0.9.38",
     "react-native-router-flux": "^4.0.0-beta.22",
+    "react-native-stars": "^1.1.1",
     "react-native-svg": "^5.4.2",
     "react-native-tooltip": "^5.0.0",
     "react-native-vector-icons": "^4.4.2",
