--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
-    "react-native-scripts": "1.5.0",
     "jest-expo": "^21.0.2",
+    "react-native-scripts": "^1.14.1",
     "react-test-renderer": "16.0.0-alpha.12"
   },
   "main": "./node_modules/react-native-scripts/build/bin/crna-entry.js",
@@ -24,15 +24,15 @@
     "jwt-decode": "^2.2.0",
     "jwt-simple": "^0.5.1",
     "material-design-icons": "^3.0.1",
-    "native-base": "^2.3.3",
+    "native-base": "^2.7.2",
     "rc-tooltip": "^3.6.0",
     "react": "16.0.0-alpha.12",
     "react-d3-radar": "^0.2.6",
-    "react-native": "^0.48.4",
+    "react-native": "^0.56.0",
     "react-native-elements": "^0.17.0",
-    "react-native-pathjs-charts": "0.0.31",
+    "react-native-pathjs-charts": "0.0.34",
     "react-native-popup-dialog": "^0.9.38",
-    "react-native-router-flux": "^4.0.0-beta.22",
+    "react-native-router-flux": "^4.0.0-beta.32",
     "react-native-stars": "^1.1.1",
     "react-native-svg": "^5.4.2",
     "react-native-tooltip": "^5.0.0",
